--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "start": "nodemon server/index.js",
-    "react-dev": "webpack --config ./webpack.config.js  -w"
+    "react-dev": "webpack --config ./webpack.config.js  -w",
+    "bundle": "webpack --config ./webpack.config.js"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
